# anki-image-cloze-web

./: .agent  .gitignore  CHANGELOG.md  README.md  package-lock.json  start-backend.cmd  start-dev.cmd  start-dev.ps1  start-frontend.cmd
backend/: pyproject.toml
backend/app/: __init__.py  main.py  models.py  services.py  storage.py
docs/: agent-experience.md  architecture.md  git-and-worktree-guide.md  performance-and-export-policy.md  pitfalls-and-corrections.md  project-overview.md  vercel-analytics.md  workflows.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
frontend/src/assets/lottie/: success.json
frontend/src/components/app/: app-support.tsx  page-transition.tsx
frontend/src/components/editor/: image-editor-inline-navigation.tsx  image-editor-loading-overlay.tsx  image-editor-reset-dialog.tsx  image-editor.tsx  (+1 more)
frontend/src/hooks/: use-anki-actions.ts  use-device-profile.ts  use-export-actions.ts  use-export-flow.ts  use-import-workflow.ts  use-project-optimization.ts  use-project-persistence.ts
frontend/src/lib/: anki-apkg-generator-local.ts  anki-connect.ts  api.ts  apkg-export.ts  card-generation.ts  compose-refs-fix.ts  deck-pool.ts  export-delivery-error.ts  image-group-export.ts  image-processing.ts  manual-preview.ts  manual-project.ts  project-store.ts  pwa.ts  share-or-download.ts  telemetry.ts  use-sync-external-store-shim-fix.ts  workbench-settings.ts  workbench-state.ts
tmp/: fix.py
(+36 files in other folders)
